Fix spacing

--- a/components/BookCard/BookCard.sass
+++ b/components/BookCard/BookCard.sass
@@ -3,6 +3,7 @@
   color: #22201f
   min-height: fit-content
   width: 200px
+  max-width: 200px
   height: 400px
 
   &:hover
