--- a/components/MainPage/MainPage.sass
+++ b/components/MainPage/MainPage.sass
@@ -4,7 +4,7 @@
 .books-grid__books
     width: 100%
     display: grid
-    grid-template-columns: repeat(6, 1fr)
+    grid-template-columns: repeat(5, 1fr)
     gap: 10px
     row-gap: 50px
 
